fix_category-carousel-overflow-hidden

--- a/src/styles/components/_categorycarousel.scss
+++ b/src/styles/components/_categorycarousel.scss
@@ -5,6 +5,7 @@
   @include flex(flex, column, center, center, nowrap);
   background-color: lightblue;
   position: relative;
+  overflow: hidden;
   margin: auto;
 
   .title__cont {
